# pytest_tmp_files

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml  test_and_release.yml
docs/: Makefile  api_reference.rst  basic_usage.rst  conf.py  file_spec.rst  index.rst  installation.rst
pytest_tmp_files/: __init__.py  make.py  plugin.py
tests/: test_make.py  test_plugin.py
